--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-        <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
-   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Oscar J Abarca Pena</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
