--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   
 <body>
+  <div id="page"
     <header>
   <div class="cover-image">
         
@@ -80,5 +81,6 @@
     </div>
   
      </section>
+  </div>
 </body>
 </html>
