--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </h2>
      
    <p>
- I am a web developer with vast knowledge in different front end and back end languages, responsive frameworks, databases and best code practices. my objective is simple be the best web developer that I can be. I am dedicated to perfected my craft by learning from more season developer, remaining humble and continously making strides to learn all that I can about development. While having spending most of my career working as Financial Analyst I believe that my understanding of prolem solving and complex anlysis are also skills that haave an will also continue to contribute to my over all success as a developer.
+ I am a web developer with great knowledge in various front end and back end languages, responsive frameworks, databases and best code practices. My goal is to continuosly learn to be the best web developer that I can be. I am dedicated to perfected my knowledge by learning from more experience developers. Having spend most of my career working as a Finance Analyst, my background helps me to solve problems and analyse complex matters. My experience and skills contribute to make me become a good developer.
   </p>
     
      <p>
-   I love working with new and exciting people. Please get in touch so we can talk about your next great project.
+   I love working with people and as a part of a team. Please get in touch so we can talk about your next great project.
      </p>
   
      <h2 id="Skills">
