--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
  <h1 id="back to top" >Fullstack developer. <br>Ruby on Rails.
     </h1>
-       <a  href="#I'm Oscar">About.</a>
+       <a  href="#I'm Oscar">About</a>
     <a href="#Skills">Skills</a> 
 </div>
     </div>
