--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="bottom">
 
     <div>  
-      <a class="tag3" href="#back to top">Back to top</a> 
+       <a class="tag3" href="#back to top"><strong>Back to top</strong></a> 
       </div>
   
     <div>
