--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <strong>Methodologies:</strong> Agile.
       </div>
 
- <div class="server"> <strong>Servers:</strong>  . </div>   
+ <div class="server"> <strong>Servers:</strong> TP, Web, Proxy. </div>   
       
     </div>
     
