--- a/spanish.html
+++ b/spanish.html
@@ -73,7 +73,7 @@
         <strong>Metodologías:</strong> Agile.
       </div>
 
- <div class="server"> <strong>Servidores:</strong>  . </div>   
+ <div class="server"> <strong>Servidores:</strong> TP, Web, Proxy. </div>   
       
     </div>
     
