--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
     </div>
 <br>
     <footer>
-    <container>   <a href="twitter.com/OjPen1" target="_blank"><img class="twitter" src="images/twitter.jpg" alt="twitter pict">
-  <a href="https://m.facebook.com/oj.a.pena" target="_blank"><img class="facebook" src="images/facebook.png" alt="facebook pict">
-  <a href=" https://www.linkedin.com/in/oscar-j-abarca-pena-a90a9316/ " target="_blank"><img class="Linkedin" src="images/LinkedIn.jpg" alt="Linkedin pict">
-  <a href=" https://github.com/oscabape10 " target="_blank"><img class="github" src="images/github.png" alt="github pict">
+    <container>   
+   <a href="twitter.com/OjPen1" target="_blank"><img class="twitter" src="images/twitter.jpg" alt="twitter pict">
+   <a href="https://m.facebook.com/oj.a.pena" target="_blank"><img class="facebook" src="images/facebook.png" alt="facebook pict">
+   <a href=" https://www.linkedin.com/in/oscar-j-abarca-pena-a90a9316/ " target="_blank"><img class="Linkedin" src="images/LinkedIn.jpg" alt="Linkedin pict">
+   <a href=" https://github.com/oscabape10 " target="_blank"><img class="github" src="images/github.png" alt="github pict">
     </container>
     </footer>
     
