--- a/spanish.html
+++ b/spanish.html
@@ -18,11 +18,11 @@
        <h1 id="back to top" >Desarrollador Web. <br> Ruby on Rails.
        </h1>
 
-        <a  href="#I'm Oscar">Sobre Mi</a>
+        <a class="about"  href="#I'm Oscar">Sobre Mi</a>
 
-        <a href="#Skills">Experiencia</a> 
+        <a class="skills" href="#Skills">Experiencia</a> 
 
-        <a href="./index.html">Ingles</a> 
+        <a class="spanish" href="./index.html">Ingles</a> 
 
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">Portfolio</button>
