--- a/index.html
+++ b/index.html
@@ -99,6 +99,20 @@
       <div>
        <a id="tag2" href="mailto:oscabape10@yahoo.co.uk"class="tag2"> Email me! </a> 
       </div>
+      
+      <br>
+     
+   <a href="twitter.com/OjPen1" target="_blank"><img class="twitter" src="images/twitter.jpg" alt="twitter pict">
+   <a href="https://m.facebook.com/oj.a.pena" target="_blank"><img class="facebook" src="images/facebook.png" alt="facebook pict">
+   <a href=" https://www.linkedin.com/in/oscar-j-abarca-pena-a90a9316/ " target="_blank"><img class="Linkedin" src="images/LinkedIn.jpg" alt="Linkedin pict">
+   <a href=" https://github.com/oscabape10 " target="_blank"><img class="github" src="images/github.png" alt="github pict">
+
+
+   <footer>
+  
+     <em>OJ Abarca Pena</em>
+
+    </footer>
 
    </section>
 
