--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <button onclick="myFunction()" class="dropbtn">Portfolio</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="https://oscabape10.github.io/Brown-Bears/index.html">Brown Bears</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
          </div>
        </div>
      </div>
