--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </h2>
      
       <p>
-        I am a web developer with great knowledge in various front end and back end languages, responsive frameworks, databases and best code practices. My goal is to continuosly learn to be the best web developer that I can be. I am dedicated to perfected my knowledge by learning from more experience developers. Having spend most of my career working as a Finance Analyst, my background helps me to solve problems and analyse complex matters. My experience and skills contribute to make me become a good developer.
+       I am a web developer with great knowledge in various front end and back end languages, responsive frameworks, databases and best code practices. My goal is to continuously learn to be the best web developer that I can be. I am dedicated to perfect my knowledge by learning from more experienced developers. Having spent most of my career working as a Finance Analyst, my background helps me to solve problems and analyse complex matters. My experience and skills contribute to make me a good developer.
       </p>
     
       <p>
