--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="grid">
       
        <div class= "language">
-         <strong> Front-end languages:</strong> HTML, CSS.
+         <strong> Front-end languages:</strong> Ruby, HTML, CSS.
        </div>
 
        <div class= "framework">
@@ -69,7 +69,7 @@
        </div>
       
        <div class= "TP">
-         <strong>Task & project management:</strong> Bitbucket, Git.
+         <strong>Task & project management:</strong> Heroku, Bitbucket, Git.
        </div>
 
        <div class="other">
