--- a/spanish.html
+++ b/spanish.html
@@ -74,7 +74,7 @@
        </div>
       
        <div class= "TP">
-         <strong>Gestión de Proyectos:</strong> Bitbucket, Git.
+         <strong>Gestión de Proyectos:</strong> Heroku, Bitbucket, Git.
         </div>
 
         <div class="other">
