--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="grid">
       
        <div class= "language">
-         <strong> Front-end languages:</strong> Ruby, HTML, CSS.
+         <strong> Front/Back-end languages:</strong> HTML, CSS, Ruby.
        </div>
 
        <div class= "framework">
