--- a/spanish.html
+++ b/spanish.html
@@ -58,7 +58,7 @@
       <div class="grid">
       
        <div class= "language">
-         <strong> Desarrollo Front-end:</strong> HTML, CSS.
+         <strong> Desarrollo Front/Back-end:</strong> HTML, CSS, Ruby.
        </div>
 
        <div class= "framework">
