--- a/spanish.html
+++ b/spanish.html
@@ -82,7 +82,7 @@
         </div>
       
         <div class="method">
-          <strong>Metodologías:</strong> Agile.
+          <strong>Metodologías:</strong> Agile, Waterfall.
         </div>
 
         <div class="server"> 
