--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        </div>
       
        <div class="method">
-         <strong>Methodologies:</strong> Agile.
+         <strong>Methodologies:</strong> Agile, Waterfall.
        </div>
 
        <div class="server"> <strong>Servers:</strong> TP, Web, Proxy. 
