--- a/spanish.html
+++ b/spanish.html
@@ -40,7 +40,7 @@
       <img id="I'm Oscar" src="images/profile2.jpg" alt="Oscar profile pict">
       
       <h2 >
-       Me llamo Oscar
+       Mi nombre es Oscar
       </h2>
      
       <p>
