--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </p>
     
       <p>
-       I love working with people and as a part of a team. Please get in touch so we can talk about your next great project.
+       I enjoy working with people and as a part of a team. Please get in touch so we can talk about your next great project.
       </p>
   
       <h2 id="Skills">
