--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    <header>
      <div class="cover-image">
        <div class="cover-text">
-         <h1 id="back to top" >Fullstack developer. 
-           <br>Ruby on Rails.
+         <h1 id="back to top" >Fullstack developer 
+           <br>Ruby on Rails
          </h1>
          <a class="about" href="#I'm Oscar">About</a>
          <a class="skills"href="#Skills">Skills</a> 
