--- a/spanish.html
+++ b/spanish.html
@@ -15,7 +15,7 @@
         
       <div class="cover-text">
     
-        <h1 id="back to top" >Desarrollador Web. <br> Ruby on Rails.
+        <h1 id="back to top" >Desarrollador Web <br> Ruby on Rails
         </h1>
 
         <a class="about"  href="#I'm Oscar">Sobre Mi</a>
