--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        </div>
 
        <div class= "framework">
-         <strong>Frameworks:</strong> Ruby on rails, bootstrap
+         <strong>Frameworks:</strong> Ruby on rails, Bootstrap
        </div>
       
        <div class="database">
