--- a/spanish.html
+++ b/spanish.html
@@ -62,7 +62,7 @@
        </div>
 
        <div class= "framework">
-         <strong>Estructura:</strong> Ruby on rails, bootstrap
+         <strong>Estructura:</strong> Ruby on rails, Bootstrap
        </div>
       
        <div class="database">
