--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
          <strong>Methodologies:</strong> Agile, Waterfall.
        </div>
 
-       <div class="server"> <strong>Servers:</strong> TP, Web, Proxy. 
+       <div class="server"> <strong>Servers:</strong> WEBrick, Puma. 
        </div>   
      </div>
     
