--- a/spanish.html
+++ b/spanish.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="server"> 
-          <strong>Servidores:</strong> FTP, Web, Proxy.
+          <strong>Servidores:</strong> WEBrick, Puma.
         </div>   
       </div>
     
