--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <header>
      <div class="cover-image">
        <div class="cover-text">
-         <h1 id="back to top" >Front End developer 
+         <h1 id="back to top" >Front End Developer 
            <br>
          </h1>
          <a class="about" href="#I'm Oscar">About</a>
