--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
        </div>
 
        <div class= "framework">
-         <strong>Frameworks:</strong> React, Ruby on rails, Bootstrap
+         <strong>Frameworks:</strong> Bootstrap, jQuery, Ruby on rails.
        </div>
       
        <div class="database">
-         <strong>Databases:</strong> MySQL,PostgreSQL,Mongo
+         <strong>Databases:</strong> MySQL, PostgreSQL, Mongo.
        </div>
 
        <div class="tools">
