--- a/spanish.html
+++ b/spanish.html
@@ -62,11 +62,11 @@
        </div>
 
        <div class= "framework">
-         <strong>Estructura:</strong> React, Ruby on rails, Bootstrap
+         <strong>Estructura:</strong> Bootstrap, jQuery, Ruby on rails.
        </div>
       
        <div class="database">
-         <strong>Base de Datos:</strong> MySQL,PostgreSQL,Mongo
+         <strong>Base de Datos:</strong> MySQL, PostgreSQL, Mongo.
        </div>
 
        <div class="tools">
