--- a/spanish.html
+++ b/spanish.html
@@ -62,7 +62,7 @@
        </div>
 
        <div class= "framework">
-         <strong>Estructura:</strong> Bootstrap, jQuery, Ruby on rails.
+         <strong>Estructura:</strong> Bootstrap, jQuery, Ruby on Rails.
        </div>
       
        <div class="database">
