--- a/spanish.html
+++ b/spanish.html
@@ -61,8 +61,8 @@
          <strong> Desarrollo Front/Back-end:</strong> HTML, CSS, JavaScript, Ruby.
        </div>
 
-       <div class= "framework">
-         <strong>Estructura:</strong> Bootstrap, jQuery, Ruby on Rails.
+       <div class= "framework-Libraries">
+         <strong>Estructura:</strong> Bootstrap, jQuery, Sass, Ruby on Rails.
        </div>
       
        <div class="database">
