--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
          <strong> Front/Back-end languages:</strong> HTML, CSS, JavaScript, Ruby.
        </div>
 
-       <div class= "framework-Libraries">
-         <strong>Frameworks:</strong> Bootstrap, jQuery, Sass, Ruby on rails.
+       <div class= "framework">
+         <strong>Frameworks-Libraries:</strong> Bootstrap, jQuery, Sass, Ruby on rails.
        </div>
       
        <div class="database">
